--- a/home.html
+++ b/home.html
@@ -2,31 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>STARS@SLU Program - Home</title>
+    <title>SpinM: Summer Program IN Mathematics - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>STARS@SLU Program</h1>
+        <h1>SpinM: Summer Program IN Mathematics</h1>
         <nav>
             <a href="index.html" class="active">Home</a>
-            <a href="about.html">About STARS@SLU</a>
-            <a href="application.html">Application</a>
-            <a href="contact.html">Contact Us</a>
-            <a href="past.html">Current Cohort</a>
+            <a href="about.html">Program</a>
+            <a href="application.html">Registration</a>
+            <a href="contact.html">Contact</a>
+            <a href="past.html">Accommodations</a>
         </nav>
     </header>
     <main>
         <section>
-            <h2>Welcome to STARS@SLU</h2>
-            <p>
-                STARS@SLU provides high school juniors and seniors with hands-on experience in statistics and data analysis using R.
-                In this program, students will explore real-world datasets from sources like St. Louis Open Data and Data is Plural, conducting research on topics of their interest.
-                By integrating research, mentorship, and exposure to different mathematical concepts and their applications, through presentations by invited speakers,
-                STARS@SLU offers a unique opportunity to strengthen students’ confidence and engagement in mathematics.
-                The program aims to expand equitable access to mathematical research and encourage and equip more students to pursue STEM fields.  
-                <br><br>
+            <h2>August 10-15, 2026</h2>
+            <p>The program is designed to immerse undergraduate students in advanced mathematical topics not typically
+                covered in the undergraduate curriculum, through an inquiry-based format that encourages active exploration 
+                and collaboration. Participants will engage with mathematical ideas, formulate conjectures, and work in 
+                small groups guided by graduate-student mentors. This structure mirrors a research collaboration, 
+                providing an authentic introduction to mathematical investigation and creative problem solving 
+                in a supportive environment. The program centers on two broad mathematical themes, analysis and algebra,
+                designed to inspire curiosity and exploration.</p>
+
+        </section>
+
+    </main>
+    <footer>
+        &copy; 2026 SpinM
+    </footer>
+</body>
+</html>
               <!--  Explore our program:
             </p>
             <ul class="home-links">
@@ -34,20 +43,12 @@
                 <li><a href="application.html">Apply for the Program</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="past.html">See Current Cohort</a></li>
-            </ul>-->
-        </section>
-             
-        <section id="sponsor-thanks" class="sponsor-thanks">
+            </ul>
+                        <section id="sponsor-thanks" class="sponsor-thanks">
             <div class="sponsor-thanks-container">
                 <img src="images/sponsor-logo.png" class="sponsor-logo">
                 <div class="thanks-note">
                     <p> Support for STARS@SLU is provided by the <strong>Mathematical Association of America</strong> and the <strong>Tensor Foundation.</strong></p>
                 </div>
             </div>
-        </section>
-    </main>
-    <footer>
-        &copy; 2025 STARS@SLU
-    </footer>
-</body>
-</html>
+        </section>-->
