Update contact page for SpinM program

--- a/contact.html
+++ b/contact.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>STARS@SLU Program</h1>
+        <h1>SpinM</h1>
     <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About STARS@SLU</a>
-            <a href="application.html">Application</a>
-            <a href="contact.html" class="active">Contact Us</a>
-            <a href="past.html">Current Cohort</a>
+            <a href="index.html" >Home</a>
+            <a href="about.html">Program</a>
+            <a href="application.html">Registration</a>
+            <a href="contact.html" class="active">Contact</a>
+            <a href="past.html">Accommodations</a>
         </nav>
     </header>
     <main>
         <section>
-            <h2>Contact Us</h2>
+            <h2>Contact</h2>
             <p>
-                For questions or further information, please email us at <a href="mailto:ozlem.ugurlu@slu.edu">ozlem.ugurlu@slu.edu</a>.
+                For questions or further information, please email us at <a href="mailto:mentoring.math@slu.edu">mentoring.math@slu.edu</a>.
             </p>
             <form>
                 <label for="contact-name">Your Name</label>
@@ -33,17 +33,9 @@
                 <button type="submit">Send Message</button>
             </form>
         </section>
-        <section id="sponsor-thanks" class="sponsor-thanks">
-            <div class="sponsor-thanks-container">
-                <img src="images/sponsor-logo.png" class="sponsor-logo">
-                <div class="thanks-note">
-                    <p> Support for STARS@SLU is provided by the <strong>Mathematical Association of America</strong> and the <strong>Tensor Foundation.</strong></p>
-                </div>
-            </div>
-        </section>
     </main>
     <footer>
-        &copy; 2025 STARS@SLU
+        &copy; 2026 SpinM
     </footer>
 </body>
 </html>
