--- a/accommodation.html
+++ b/accommodation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SpinM - Accommodations</title>
+    <title>SpinM - Accommodation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,7 +14,7 @@
             <a href="about.html" >Program</a>
             <a href="application.html" >Registration</a>
             <a href="contact.html" >Contact</a>
-            <a href="past.html" class="active">Accommodations</a>
+            <a href="past.html" class="active">Accommodation</a>
         </nav>
     </header>
     <main>
