Update and rename index.html to home.html

--- a/home.html
+++ b/home.html
@@ -10,11 +10,11 @@
     <header>
         <h1>SpinM: Summer Program IN Mathematics</h1>
         <nav>
-            <a href="index.html" class="active">Home</a>
-            <a href="about.html">Program</a>
-            <a href="application.html">Registration</a>
+            <a href="home.html" class="active">Home</a>
+            <a href="program.html">Program</a>
+            <a href="registration.html">Registration</a>
             <a href="contact.html">Contact</a>
-            <a href="past.html">Accommodations</a>
+            <a href="accommodation.html">Accommodations</a>
         </nav>
     </header>
     <main>
@@ -23,9 +23,7 @@
             <p>The program is designed to immerse undergraduate students in advanced mathematical topics not typically
                 covered in the undergraduate curriculum, through an inquiry-based format that encourages active exploration 
                 and collaboration. Participants will engage with mathematical ideas, formulate conjectures, and work in 
-                small groups guided by graduate-student mentors. This structure mirrors a research collaboration, 
-                providing an authentic introduction to mathematical investigation and creative problem solving 
-                in a supportive environment. The program centers on two broad mathematical themes, analysis and algebra,
+                small groups guided by graduate-student mentors. The program centers on two broad mathematical themes, analysis and algebra,
                 designed to inspire curiosity and exploration.</p>
 
         </section>
