Update navigation links in accommodation.html

--- a/accommodation.html
+++ b/accommodation.html
@@ -10,11 +10,11 @@
     <header>
         <h1>SpinM</h1>
         <nav>
-     <a href="index.html" >Home</a>
-            <a href="about.html" >Program</a>
-            <a href="application.html" >Registration</a>
-            <a href="contact.html" >Contact</a>
-            <a href="past.html" class="active">Accommodation</a>
+            <a href="home.html">Home</a>
+            <a href="program.html">Program</a>
+            <a href="registration.html">Registration</a>
+            <a href="contact.html">Contact</a>
+            <a href="accommodation.html" class="active">Accommodations</a>
         </nav>
     </header>
     <main>
