--- a/registration.html
+++ b/registration.html
@@ -10,11 +10,11 @@
     <header>
         <h1>SpinM</h1>
         <nav>
-     <a href="index.html" >Home</a>
-            <a href="about.html" >Program</a>
-            <a href="application.html" class="active">Registration</a>
+                <a href="home.html">Home</a>
+            <a href="program.html" >Program</a>
+            <a href="registration.html" class="active">Registration</a>
             <a href="contact.html" >Contact</a>
-            <a href="past.html">Accommodations</a>
+            <a href="accommodation.html" >Accommodations</a>
         </nav>
     </header>
     <main>
