Fix typo in accommodations link text

--- a/registration.html
+++ b/registration.html
@@ -14,7 +14,7 @@
             <a href="program.html" >Program</a>
             <a href="registration.html" class="active">Registration</a>
             <a href="contact.html" >Contact</a>
-            <a href="accommodation.html" >Accommodations</a>
+            <a href="accommodation.html" >Accommodation</a>
         </nav>
     </header>
     <main>
