Change 'Accommodations' to 'Accommodation' in nav

--- a/accommodation.html
+++ b/accommodation.html
@@ -14,7 +14,7 @@
             <a href="program.html">Program</a>
             <a href="registration.html">Registration</a>
             <a href="contact.html">Contact</a>
-            <a href="accommodation.html" class="active">Accommodations</a>
+            <a href="accommodation.html" class="active">Accommodation</a>
         </nav>
     </header>
     <main>
