--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>SpinM: Summer Program IN Mathematics</h1>
         <nav>
-            <a href="home.html" class="active">Home</a>
+            <a href="index.html" class="active">Home</a>
             <a href="program.html">Program</a>
             <a href="registration.html">Registration</a>
             <a href="contact.html">Contact</a>
