--- a/accommodation.html
+++ b/accommodation.html
@@ -10,7 +10,7 @@
     <header>
         <h1>SpinM</h1>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="program.html">Program</a>
             <a href="registration.html">Registration</a>
             <a href="contact.html">Contact</a>
