Change headings from h2 to h3 in schedule section

--- a/program.html
+++ b/program.html
@@ -27,7 +27,7 @@
 
 
 <section id="schedule">
-        <h2>Schedule for Monday, Tuesday, Thursday, and Friday</h2>
+        <h3>Schedule for Monday, Tuesday, Thursday, and Friday</h3>
 <table border="1">
   <thead>
     <tr>
@@ -67,7 +67,7 @@
   </tbody>
 </table>
 
-        <h2>Schedule for Wednesday</h2>
+        <h3>Schedule for Wednesday</h3>
 <table border="1">
   <thead>
     <tr>
@@ -95,7 +95,7 @@
   </tbody>
 </table>
 
-        <h2>Schedule for Saturday</h2>
+        <h3>Schedule for Saturday</h3>
 <table border="1">
   <thead>
     <tr>
@@ -114,6 +114,8 @@
     </tr>
   </tbody>
 </table>
+</section>
+
         
         <section>
             <h2>Organizers</h2>
