--- a/program.html
+++ b/program.html
@@ -27,6 +27,7 @@
 
 
 <section id="schedule">
+    <h2>Speakers</h2>
         <h3>Schedule for Monday, Tuesday, Thursday, and Friday</h3>
 <table border="1">
   <thead>
