Change program description to 'TBA'
Updated program description to 'TBA'.

--- a/program.html
+++ b/program.html
@@ -20,8 +20,7 @@
     <main>
         <section>
             <h2>Speakers</h2>
-            <p> In this program, students will learn how to use R for data analysis, work on team research projects with real-world datasets, and present their findings at a
-                poster session. The program also includes mentoring, guest speaker talks, and sessions about college life and STEM careers.
+            <p>  TBA
             </p>
         </section>
 
