--- a/program.html
+++ b/program.html
@@ -26,7 +26,7 @@
 
 
 <section id="schedule">
-    <h2>Speakers</h2>
+    <h2>Schedule</h2>
         <h3>Schedule for Monday, Tuesday, Thursday, and Friday</h3>
 <table border="1">
   <thead>
