--- a/registration.html
+++ b/registration.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>SpinM</h1>
+        <h1>SpinM: Summer Program IN Mathematics</h1>
         <nav>
               <a href="index.html">Home</a>
             <a href="program.html" >Program</a>
