--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>SpinM: Summer Program IN Mathematics</h1>
+        <h3>Saint Louis University, St. Louis, MO</h3>
+        <h3>August 10-15, 2026</h3>
         <nav>
             <a href="index.html" class="active">Home</a>
             <a href="program.html">Program</a>
