Update program title in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section>
-            <h2>August 10-15, 2026</h2>
+            <h2>SpinM: Summer Program IN Mathematics</h2>
             <p>The program is designed to immerse undergraduate students in advanced mathematical topics not typically
                 covered in the undergraduate curriculum, through an inquiry-based format that encourages active exploration 
                 and collaboration. Participants will engage with mathematical ideas, formulate conjectures, and work in 
