--- a/program.html
+++ b/program.html
@@ -122,7 +122,7 @@
             <p><alert>Dorsa Ghoreishi,</alert> Assistant Professor, Department of Mathematics and Statistics, Saint Louis University, 
             <a href="https://dorigh.github.io/" target="_blank" rel="noopener noreferrer"> Personal Website </a></p>
             
-            <p><alert>Elodie Pozzi,</alert> Assistant Professor, Department of Mathematics and Statistics, Saint Louis University,
+            <p><alert>Elodie Pozzi,</alert> Associate Professor, Department of Mathematics and Statistics, Saint Louis University,
             <a href="https://www.slu.edu/arts-and-sciences/mathematics-statistics/faculty/elodie-pozzi.php" target="_blank" rel="noopener noreferrer"> Personal Website </a></p>
 
             <p><alert>Özlem Uğurlu,</alert> Assistant Professor, Department of Mathematics and Statistics, Saint Louis University,
